Fix search page display on mobile layout
1. Close #39

--- a/source/css/scheme-taurus/search.styl
+++ b/source/css/scheme-taurus/search.styl
@@ -2,10 +2,18 @@
   margin: 0 auto
   margin-top: 14em
   width: 60%
+  +for_breakpoint(tablet)
+    width: 90%
+  +for_breakpoint(mobile)
+    width: 100%
+  +for_breakpoint(half-desktop)
+    width: 70% 
   text-align: center
   .search-input
     border: none
-    width: 40%
+    width: 80%
+    +for_breakpoint(mobile)
+      width: 60%
     padding: 0.5em
     margin: 0.5em
     border-radius: 5px
@@ -21,7 +29,7 @@
   .tag-cloud
     margin: 0 auto
     margin-top: 3em
-    width:40%
+    width:80%
     a
       &:link
         text-decoration: none
@@ -29,6 +37,7 @@
         text-decoration: underline
   .cat-list
     margin-top: 3em
+    width: 80%
     li
       display: inline-block
       margin: 0 0.5em
